--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
     "nodemon": "^3.0.1",
     "validator": "^13.11.0"
