--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "code-heal",
+  "name": "ecommerce",
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
